# ProjetosEmbarcatech

./: CMakeLists.txt  README.md  main.c
.devcontainer/: Dockerfile  devcontainer.json
